--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+flask = "^3.0.3"
 
 
 [build-system]
@@ -16,3 +17,4 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.scripts]
 test = "scripts:test"
 start = "scripts:start"
+dev = "scripts:dev"
